--- a/css/styles.css
+++ b/css/styles.css
@@ -144,16 +144,16 @@ h1 {
 	font-size: 30px;
 	font-weight: 600;
 	color: #333;
-	padding: 30px;
+	padding: 20px 30px;
 }
 
 #countries-list {
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: space-evenly;
+	justify-content: center;
 	align-items: center;
-	padding: 20px;
-	/* gap: 12px; */
+	padding: 0px 20px;
+	gap: 15px;
 	z-index: 1;
 }
 
@@ -163,14 +163,16 @@ h1 {
 	align-items: center;
 	gap: 20px;
 	background-color: white;
-	width: 210px;
+	box-shadow: 0px 0px 10px 1px rgb(220, 220, 220);
+	border: 1px solid #DDDDDD;
+	width: 190px;
 	height: 190px;
-	padding: 10px;
+	padding: 8px;
 	border-radius: 5px;
 }
 
 .flag {
-	width: 210px;
+	width: 190px;
 	height: 120px;
 	border-radius: 5px;
 	cursor: pointer;
@@ -180,13 +182,17 @@ h1 {
 	display: none;
 }
 
-.show{
+.show {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	width: 100%;
-	height: 100%;
-	position: fixed;
+	width: 100vw;
+	height: 100vh;
+	position: absolute;
+	top: 0px;
+	bottom: 0px;
+	left: 0px;
+	right: 0px;
 	z-index: 2;
 }
 
@@ -194,15 +200,17 @@ h1 {
 	display: flex;
 	flex-wrap: wrap;
 	align-items: center;
-	justify-content: space-between;
-	padding: 20px;
+	justify-content: space-around;
+	padding: 15px;
 	width: 520px;
 	height: 270px;
+	position: fixed;
 	background-color: white;
+	border: 1px solid #DDDDDD;
 	border-radius: 5px;
 }
 
-.card > img {
+.card>img {
 	width: 310px;
 	height: 200px;
 	border-radius: 5px;
@@ -211,6 +219,9 @@ h1 {
 .info {
 	display: flex;
 	flex-direction: column;
+	flex-wrap: wrap;
+	box-sizing: border-box;
+	max-width: 35%;
 	justify-content: center;
 	margin-right: 5px;
 	gap: 15px;
