--- a/css/styles.css
+++ b/css/styles.css
@@ -186,13 +186,11 @@ h1 {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	width: 100vw;
-	height: 100vh;
-	position: absolute;
+	position: fixed;
 	top: 0px;
-	bottom: 0px;
 	left: 0px;
-	right: 0px;
+	width: 100%;
+	height: 100%;
 	z-index: 2;
 }
 
@@ -206,6 +204,7 @@ h1 {
 	height: 270px;
 	position: fixed;
 	background-color: white;
+	box-shadow: 0 0 0 100vmax rgba(0, 0, 0, .4);
 	border: 1px solid #DDDDDD;
 	border-radius: 5px;
 }
@@ -233,6 +232,7 @@ span {
 }
 
 .btn {
+	justify-self: left;
 	padding: 5px 10px;
 	border-radius: 5px;
 	background-color: black;
